# BoomAI

./: .gitignore  README.md  REQUIREMENTS.md  boomai-setup.sh  puffy_preview.html  pyproject.toml
.github/workflows/: boomai.yml
boomai/: apply_fixes.py  cli.py  config.py  estimator.py  gemini_review.py  github_client.py  languages.py  main.py  models.py  prompts.py  slack_notifier.py  static_analysis.py
boomai/analysis/: __init__.py  languages.py  static_analysis.py
boomai/app/: __init__.py  orchestrator.py
boomai/context/: __init__.py  indexer.py  retriever.py
boomai/core/: __init__.py  config.py  google_models.py  google_pricing.py  models.py  policies.py
boomai/data/: requirements.txt
boomai/gui/: bridge.py  launcher.py  scan_runner.py
boomai/integrations/: __init__.py
boomai/presentation/: __init__.py  banner.py  estimate_output.py  progress.py  review_output.py  settings_menu.py
boomai/review/: __init__.py  estimation_history.py  estimator.py  gemini_review.py  pack_registry.py  pack_selector.py  progress_history.py  prompt_composer.py  prompt_packs.py  (+3 more)
docs/: prompt-pack-architecture.md  prompt-pack-research-notes.md
scripts/: apply_fixes.py  cli.py  config.py  gemini_review.py  github_client.py  main.py  models.py  prompts.py  slack_notifier.py  static_analysis.py
tests/: test_cli_contracts.py  test_file_selection_service.py  test_google_integration_services.py  test_gui_launcher.py  test_local_patch_service.py  test_review_services.py  test_run_cost_report.py  test_runtime_policy.py  test_settings_service.py
tools/: check_sync.py
(+55 files in other folders)
